# kop2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: sanity_check.py
src/kop2024/: __init__.py  helpers.py  network.py
tests/: test_helpers.py
